5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1834_1274.log
== TEST (2019-06-30 18:32:17) 
-- CODE:
from numpy import*

ent= int(input("AAAA:"))

matriarca= zeros(n,n dtype=int)
print(matriarca)
-- ERROR:
File "XXXX", line 5
    matriarca= zeros(n,n dtype=int)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 18:32:23) 
-- CODE:
from numpy import*

ent= int(input("AAAA:"))

matriarca= zeros(n,n ndtype=int)
print(matriarca)
-- ERROR:
File "XXXX", line 5
    matriarca= zeros(n,n ndtype=int)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 18:32:27) 
-- CODE:
from numpy import*

ent= int(input("AAAA:"))

matriarca= zeros(n,n ,dtype=int)
print(matriarca)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 18:32:38) 
-- CODE:
from numpy import*

n= int(input("AAAA:"))

matriarca= zeros(n,n ,dtype=int)
print(matriarca)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 18:33:54) 
-- CODE:
from numpy import*

n= int(input("AAAA:"))

matriarca= zeros((n,n() dtype=int)
print(matriarca)
-- ERROR:
File "XXXX", line 5
    matriarca= zeros((n,n() dtype=int)
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 18:34:04) 
-- CODE:
from numpy import*

n= int(input("AAAA:"))

matriarca= zeros((n,n) dtype=int)
print(matriarca)
-- ERROR:
File "XXXX", line 5
    matriarca= zeros((n,n) dtype=int)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 18:34:09) 
-- CODE:
from numpy import*

n= int(input("AAAA:"))

matriarca= zeros((n,n), dtype=int)
print(matriarca)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 19:04:09) 
-- CODE:
from numpy import*

n= int(input("AAAA:"))

matriarca= zeros((n,n), dtype=int)

for i in range(n):
	for j in range(n):
		matriarca[i,j]=i-1
		
print(matriarca)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 19:06:30) 
-- CODE:
from numpy import*

n= int(input("AAAA:"))

matriarca= zeros((n,n), dtype=int)

for i in range(n):
	for j in range(n):
		matriarca[i,j]=1+i
print(matriarca)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 19:14:43) 
-- CODE:
from numpy import*

n= int(input("AAAA:"))

matriarca= zeros((n,n), dtype=int)

for i in range(n):
	for j in range(n):
		matriarca[i,j]= min(i,j)+1
print(matriarca)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 19:14:52) 
-- CODE:
from numpy import*

n= int(input("AAAA:"))

matriarca= zeros((n,n), dtype=int)

for i in range(n):
	for j in range(n):
		matriarca[i,j]= min(i,j)+1
print(matriarca)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 19:14:57) 
-- CODE:
from numpy import*

n= int(input("AAAA:"))

matriarca= zeros((n,n), dtype=int)

for i in range(n):
	for j in range(n):
		matriarca[i,j]= min(i,j)+1
print(matriarca)
-- EXECUTION TIME:
1.19643
-- TEST CASE 1:
---- input:
3
---- correct output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
---- user output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
-- TEST CASE 2:
---- input:
8
---- correct output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
---- user output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
-- TEST CASE 3:
---- input:
1
---- correct output:
[[1]]
---- user output:
[[1]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
